--- a/test/real-zsyh/real-zsyh.zsh.adoc
+++ b/test/real-zsyh/real-zsyh.zsh.adoc
@@ -22,6 +22,8 @@ FUNCTIONS
  _zsh_highlight_cursor_moved
  _zsh_highlight_load_highlighters
  _zsh_highlight_preexec_hook
+AUTOLOAD add-zsh-hook
+AUTOLOAD is-at-least
 
 DETAILS
 -------
@@ -35,7 +37,9 @@ Calls functions:
 
  Script_Body_
  |-- _zsh_highlight_bind_widgets
- `-- _zsh_highlight_load_highlighters
+ |-- _zsh_highlight_load_highlighters
+ |-- add-zsh-hook
+ `-- is-at-least
 
 _zsh_highlight
 ~~~~~~~~~~~~~~
@@ -188,4 +192,26 @@ Not called by script or any function, may be a hook or Zle widget, etc.
 Comment:
 
  # Reset scratch variables when commandline is done.
+
+add-zsh-hook
+~~~~~~~~~~~~
+
+91 lines
+
+No functions called
+
+Called by:
+
+ Script_Body_
+
+is-at-least
+~~~~~~~~~~~
+
+38 lines
+
+No functions called
+
+Called by:
+
+ Script_Body_
 
