--- a/test/real-zsyh/real-zsyh.zsh.adoc
+++ b/test/real-zsyh/real-zsyh.zsh.adoc
@@ -108,7 +108,7 @@ No functions called
 
 Called by:
 
- Script_Body_
+ Script-Body
 
 Comment:
 
@@ -171,7 +171,7 @@ No functions called
 
 Called by:
 
- Script_Body_
+ Script-Body
 
 Comment:
 
@@ -202,7 +202,7 @@ No functions called
 
 Called by:
 
- Script_Body_
+ Script-Body
 
 is-at-least
 ~~~~~~~~~~~
@@ -213,5 +213,5 @@ No functions called
 
 Called by:
 
- Script_Body_
+ Script-Body
 
