--- a/test/nested/nested.zsh.adoc
+++ b/test/nested/nested.zsh.adoc
@@ -27,7 +27,7 @@ DETAILS
 Script Body
 ~~~~~~~~~~~
 
-Has 6 lines. No functions are called (may attach to Zle or do hooks, etc.).
+Has 6 line(s). No functions are called (may attach to Zle or do hooks, etc.).
 
 dummy
 ~~~~~
@@ -52,12 +52,14 @@ ____
 Has 1 line(s). Calls functions:
 
  test1
- `-- test2
-     `-- test3
-         `-- test4
-             `-- test5
-                 `-- test6
-                     `-- dummy
+ |-- test2
+ |   `-- test3
+ |       `-- test4
+ |           `-- test5
+ |               `-- test6
+ |                   `-- dummy
+ `-- test6
+     `-- dummy
 
 Not called by script or any function, may be a hook or Zle widget, etc.
 
@@ -149,5 +151,6 @@ Has 2 line(s). Calls functions:
 
 Called by:
 
+ test1
  test5
 
