--- a/examples/zsh-autosuggestions.zsh.adoc
+++ b/examples/zsh-autosuggestions.zsh.adoc
@@ -16,13 +16,13 @@ FUNCTIONS
  _zsh_autosuggest_accept
  _zsh_autosuggest_async_pty_create
  _zsh_autosuggest_async_pty_destroy
- _zsh_autosuggest_async_pty_recreate
+ _zsh_autosuggest_async_pty_recreate (precmd hook)
  _zsh_autosuggest_async_request
  _zsh_autosuggest_async_response
  _zsh_autosuggest_async_server
  _zsh_autosuggest_async_start
  _zsh_autosuggest_bind_widget
- _zsh_autosuggest_bind_widgets
+ _zsh_autosuggest_bind_widgets (precmd hook)
  _zsh_autosuggest_clear
  _zsh_autosuggest_disable
  _zsh_autosuggest_enable
@@ -37,7 +37,7 @@ FUNCTIONS
  _zsh_autosuggest_invoke_original_widget
  _zsh_autosuggest_modify
  _zsh_autosuggest_partial_accept
- _zsh_autosuggest_start
+ _zsh_autosuggest_start (precmd hook)
  _zsh_autosuggest_strategy_default
  _zsh_autosuggest_strategy_match_prev_cmd
  _zsh_autosuggest_suggest
@@ -74,7 +74,7 @@ _zsh_autosuggest_async_pty_create
 
 Has 13 line(s). Doesn't call other functions.
 
-Uses features: _zle_, _zpty_
+Uses feature(s): _zle_, _zpty_
 
 Called by:
 
@@ -85,7 +85,7 @@ _zsh_autosuggest_async_pty_destroy
 
 Has 4 line(s). Doesn't call other functions.
 
-Uses features: _zle_, _zpty_
+Uses feature(s): _zle_, _zpty_
 
 Called by:
 
@@ -94,7 +94,7 @@ Called by:
 _zsh_autosuggest_async_pty_recreate
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Has 2 line(s). Calls functions:
+Has 2 line(s). *Is a precmd hook*. Calls functions:
 
  _zsh_autosuggest_async_pty_recreate
  |-- _zsh_autosuggest_async_pty_create
@@ -109,7 +109,7 @@ _zsh_autosuggest_async_request
 
 Has 1 line(s). Doesn't call other functions.
 
-Uses features: _zpty_
+Uses feature(s): _zpty_
 
 Called by:
 
@@ -126,7 +126,7 @@ ____
 
 Has 6 line(s). Doesn't call other functions.
 
-Uses features: _zle_, _zpty_
+Uses feature(s): _zle_, _zpty_
 
 Not called by script or any function, may be a hook or Zle widget, etc.
 
@@ -139,7 +139,7 @@ ____
 
 Has 21 line(s). Doesn't call other functions.
 
-Uses features: _kill_
+Uses feature(s): _kill_
 
 Not called by script or any function, may be a hook or Zle widget, etc.
 
@@ -172,7 +172,7 @@ Has 29 line(s). Calls functions:
  |-- _zsh_autosuggest_get_bind_count
  `-- _zsh_autosuggest_incr_bind_count
 
-Uses features: _eval_, _zle_
+Uses feature(s): _eval_, _zle_
 
 Called by:
 
@@ -185,7 +185,7 @@ ____
  # Map all configured widgets to the right autosuggest widgets
 ____
 
-Has 24 line(s). Calls functions:
+Has 24 line(s). *Is a precmd hook*. Calls functions:
 
  _zsh_autosuggest_bind_widgets
  `-- _zsh_autosuggest_bind_widget
@@ -285,7 +285,7 @@ ____
 
 Has 12 line(s). Doesn't call other functions.
 
-Uses features: _zpty_
+Uses feature(s): _zpty_
 
 Called by:
 
@@ -304,7 +304,7 @@ Has 7 line(s). Calls functions:
  |-- _zsh_autosuggest_async_request
  `-- _zsh_autosuggest_suggest
 
-Uses features: _zpty_
+Uses feature(s): _zpty_
 
 Called by:
 
@@ -366,7 +366,7 @@ ____
 
 Has 9 line(s). Doesn't call other functions.
 
-Uses features: _zle_
+Uses feature(s): _zle_
 
 Called by:
 
@@ -414,7 +414,7 @@ ____
  # Start the autosuggestion widgets
 ____
 
-Has 8 line(s). Calls functions:
+Has 8 line(s). *Is a precmd hook*. Calls functions:
 
  _zsh_autosuggest_start
  |-- _zsh_autosuggest_async_start
@@ -514,7 +514,7 @@ add-zsh-hook
 
 Has 93 line(s). Doesn't call other functions.
 
-Uses features: _autoload_
+Uses feature(s): _autoload_
 
 Called by:
 
